add translations, bug fixes, minor color changes

--- a/pages/climate-history.html
+++ b/pages/climate-history.html
@@ -15,10 +15,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   </head>
+
   <body>
-<!-- Header -->
+    <!-- Header -->
     <header>
-    <!-- Navigation Menu -->
+      <!-- Navigation Menu -->
       <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
@@ -127,6 +128,7 @@
       <section class="my-2">
         <h2>Climate Change Today</h2>
         <p>Today, the Earth is warming at a much faster rate than in the past. Scientists have concluded that the main cause of global warming is the greenhouse effect, a phenomenon that occurs when gases in the atmosphere trap the Sun's heat. The greenhouse effect is so named because of the way it works. Visible light from the Sun shines onto Earth, where it is absorbed and then radiates back into the atmosphere as heat. Some of the heat passes through the atmosphere, but most of it is absorbed by greenhouse gases and re-emitted in all directions, warming the surface of the Earth and the lower atmosphere.</p>
+      </section>
     </main>
   
     <!-- Footer -->
@@ -152,17 +154,17 @@
           <!-- Section: Social media -->
           <section class="mb-4">
             <!-- Facebook -->
-            <a class="btn btn-outline-light btn-floating m-1" href="https://facebook.com/" role="button"><i class="fa fa-facebook"></i></a>
+            <a class="btn social-media btn-floating m-1" href="https://facebook.com/" role="button"><i class="fa fa-facebook"></i></a>
             <!-- Twitter -->
-            <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/" role="button"><i class="fa fa-twitter"></i></a>
+            <a class="btn social-media btn-floating m-1" href="https://twitter.com/" role="button"><i class="fa fa-twitter"></i></a>
             <!-- Google -->
-            <a class="btn btn-outline-light btn-floating m-1" href="https://google.com/" role="button"><i class="fa fa-google"></i></a>
+            <a class="btn social-media btn-floating m-1" href="https://google.com/" role="button"><i class="fa fa-google"></i></a>
             <!-- Instagram -->
-            <a class="btn btn-outline-light btn-floating m-1" href="https://instagram.com/" role="button"><i class="fa fa-instagram"></i></a>
+            <a class="btn social-media btn-floating m-1" href="https://instagram.com/" role="button"><i class="fa fa-instagram"></i></a>
             <!-- Linkedin -->
-            <a class="btn btn-outline-light btn-floating m-1" href="https://linkedin.com/" role="button"><i class="fa fa-linkedin"></i></a>
+            <a class="btn social-media btn-floating m-1" href="https://linkedin.com/" role="button"><i class="fa fa-linkedin"></i></a>
             <!-- Github -->
-            <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/el-we" role="button"><i class="fa fa-github"></i></a>
+            <a class="btn social-media btn-floating m-1" href="https://github.com/el-we" role="button"><i class="fa fa-github"></i></a>
           </section>
 
           <!-- Section: Text -->
