--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <!-- Header -->
     <header>
-    <!-- Navigation Menu -->
+      <!-- Navigation Menu -->
       <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
@@ -113,17 +113,17 @@
           <!-- Section: Social media -->
           <section class="mb-4">
             <!-- Facebook -->
-            <a class="btn btn-outline-light btn-floating m-1" href="https://facebook.com/" role="button"><i class="fa fa-facebook"></i></a>
+            <a class="btn social-media btn-floating m-1" href="https://facebook.com/" role="button"><i class="fa fa-facebook"></i></a>
             <!-- Twitter -->
-            <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/" role="button"><i class="fa fa-twitter"></i></a>
+            <a class="btn social-media btn-floating m-1" href="https://twitter.com/" role="button"><i class="fa fa-twitter"></i></a>
             <!-- Google -->
-            <a class="btn btn-outline-light btn-floating m-1" href="https://google.com/" role="button"><i class="fa fa-google"></i></a>
+            <a class="btn social-media btn-floating m-1" href="https://google.com/" role="button"><i class="fa fa-google"></i></a>
             <!-- Instagram -->
-            <a class="btn btn-outline-light btn-floating m-1" href="https://instagram.com/" role="button"><i class="fa fa-instagram"></i></a>
+            <a class="btn social-media btn-floating m-1" href="https://instagram.com/" role="button"><i class="fa fa-instagram"></i></a>
             <!-- Linkedin -->
-            <a class="btn btn-outline-light btn-floating m-1" href="https://linkedin.com/" role="button"><i class="fa fa-linkedin"></i></a>
+            <a class="btn social-media btn-floating m-1" href="https://linkedin.com/" role="button"><i class="fa fa-linkedin"></i></a>
             <!-- Github -->
-            <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/el-we" role="button"><i class="fa fa-github"></i></a>
+            <a class="btn social-media btn-floating m-1" href="https://github.com/el-we" role="button"><i class="fa fa-github"></i></a>
           </section>
 
           <!-- Section: Text -->
