--- a/pages/climate-history.html
+++ b/pages/climate-history.html
@@ -176,7 +176,7 @@
         </div>
 
         <!-- Copyright -->
-        <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
+        <div class="copyright text-center p-2">
           © 2023 Copyright:
           <a class="text-white" href="https://greenworld.com/">greenworld.com</a>
         </div>
