--- a/pages/climate-history_rtl.html
+++ b/pages/climate-history_rtl.html
@@ -171,7 +171,7 @@
         </div>
 
         <!-- Copyright -->
-        <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
+        <div class="copyright text-center p-2">
           © 2023 حقوق النشر:
           <a class="text-white" href="https://greenworld.com/">greenworld.com</a>
         </div>
