--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="/index_rtl.html">عربي</a>
+                <a class="nav-link" href="index_rtl.html">عربي</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./pages/climate-history.html">Climate History</a>
