--- a/index_rtl.html
+++ b/index_rtl.html
@@ -35,7 +35,7 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="/index.html">English</a>
+                <a class="nav-link" href="index.html">English</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./pages/climate-history_rtl.html">تاريخ المناخ</a>
